テーマ更新

--- a/app/javascript/styles/cure-lime/variables.scss
+++ b/app/javascript/styles/cure-lime/variables.scss
@@ -9,6 +9,12 @@ $classic-primary-color: #9bbe9b;
 $classic-secondary-color: #d7e6d7;
 $classic-highlight-color: #1ea51e;
 
+$blurple-600: hsl(252deg, 59%, 51%); // Iris
+$blurple-500: hsl(240deg, 100%, 69%); // Brand purple
+$blurple-300: hsl(237deg, 92%, 75%); // Faded Blue
+$grey-600: hsl(240deg, 8%, 33%); // Trout
+$grey-100: hsl(240deg, 51%, 90%); // Topaz
+
 // Differences
 $success-green: #3c754d;
 
