--- a/app/javascript/styles/cure-orange/variables.scss
+++ b/app/javascript/styles/cure-orange/variables.scss
@@ -9,6 +9,12 @@ $classic-primary-color: #bfab97;
 $classic-secondary-color: #e8e0d9;
 $classic-highlight-color: #d98d2b;
 
+$blurple-600: hsl(252deg, 59%, 51%); // Iris
+$blurple-500: hsl(240deg, 100%, 69%); // Brand purple
+$blurple-300: hsl(237deg, 92%, 75%); // Faded Blue
+$grey-600: hsl(240deg, 8%, 33%); // Trout
+$grey-100: hsl(240deg, 51%, 90%); // Topaz
+
 // Differences
 $success-green: lighten(hsl(138deg, 32%, 35%), 8%);
 
