--- a/app/javascript/styles/bshock.scss
+++ b/app/javascript/styles/bshock.scss
@@ -1,4 +1,5 @@
 @import 'mastodon/mixins';
+@import 'mastodon/variables';
 @import 'bshock/variables';
 @import 'fonts/roboto';
 @import 'fonts/roboto-mono';
