--- a/app/javascript/styles/cure-orange/variables.scss
+++ b/app/javascript/styles/cure-orange/variables.scss
@@ -4,14 +4,15 @@
 $black: #000000;
 $white: #ffffff;
 
-$classic-base-color: #352d26;
-$classic-primary-color: #bfab97;
-$classic-secondary-color: #e8e0d9;
-$classic-highlight-color: #d98d2b;
+$classic-base-color: hsl(35deg, 43%, 24%);
+$classic-primary-color: hsl(34deg, 24%, 67%);
+$classic-secondary-color: hsl(34deg, 25%, 88%);
+$classic-highlight-color: hsl(34deg, 70%, 51%);
 
-$blurple-600: hsl(252deg, 59%, 51%); // Iris
-$blurple-500: hsl(240deg, 100%, 69%); // Brand purple
-$blurple-300: hsl(237deg, 92%, 75%); // Faded Blue
+$blurple-600: hsl(34deg, 62%, 48%); // Iris
+$blurple-400: hsl(34deg, 70%, 50%); // Brand purple
+$blurple-500: hsl(34deg, 70%, 53%); // Brand purple
+$blurple-300: hsl(34deg, 70%, 62%); // Faded Blue
 $grey-600: hsl(240deg, 8%, 33%); // Trout
 $grey-100: hsl(240deg, 51%, 90%); // Topaz
 
@@ -22,27 +23,35 @@ $base-overlay-background: $white !default;
 $valid-value-color: $success-green !default;
 
 $ui-base-color: $classic-secondary-color !default;
-$ui-base-lighter-color: #e8d2b7;
-$ui-primary-color: #edbc9c;
+$ui-base-lighter-color: hsl(34deg, 24%, 75%);
+$ui-primary-color: $classic-primary-color !default;
 $ui-secondary-color: $classic-base-color !default;
-$ui-highlight-color: #d98d2b;
+$ui-highlight-color: $classic-highlight-color !default;
+
+$ui-button-color: $white !default;
+$ui-button-background-color: $blurple-500 !default;
+$ui-button-focus-background-color: $blurple-600 !default;
+$ui-button-focus-outline-color: $blurple-400 !default;
+$ui-button-focus-outline: solid 2px $ui-button-focus-outline-color !default;
 
 $ui-button-secondary-color: $grey-600 !default;
 $ui-button-secondary-border-color: $grey-600 !default;
 $ui-button-secondary-focus-color: $white !default;
 
-$ui-button-tertiary-color: $blurple-500 !default;
-$ui-button-tertiary-border-color: $blurple-500 !default;
+$ui-button-tertiary-color: $blurple-300 !default;
+$ui-button-tertiary-border-color: $blurple-300 !default;
+$ui-button-tertiary-focus-background-color: $blurple-600 !default;
+$ui-button-tertiary-focus-color: $white !default;
 
 $primary-text-color: $black !default;
 $darker-text-color: $classic-base-color !default;
 $highlight-text-color: $ui-highlight-color !default;
-$dark-text-color: #665547;
-$action-button-color: #c46f00;
+$dark-text-color: hsl(34deg, 16%, 32%);
+$action-button-color: hsl(34deg, 100%, 38%);
 
 $inverted-text-color: $black !default;
 $lighter-text-color: $classic-base-color !default;
-$light-text-color: #274f34;
+$light-text-color: hsl(34deg, 16%, 32%);
 
 // Newly added colors
 $account-background-color: $white !default;
@@ -67,13 +76,14 @@ $account-background-color: $white !default;
 $emojis-requiring-inversion: 'chains';
 
 body {
-  --dropdown-border-color: hsl(240deg, 25%, 88%);
+  --dropdown-border-color: hsl(34deg, 25%, 88%);
   --dropdown-background-color: #fff;
-  --modal-border-color: hsl(240deg, 25%, 88%);
+  --modal-border-color: hsl(34deg, 25%, 88%);
   --modal-background-color: var(--background-color-tint);
-  --background-border-color: hsl(240deg, 25%, 88%);
+  --background-border-color: hsl(34deg, 25%, 88%);
   --background-color: #fff;
   --background-color-tint: rgba(255, 255, 255, 80%);
   --background-filter: blur(10px);
   --on-surface-color: #{transparentize($ui-base-color, 0.65)};
 }
+
